--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@react-navigation/stack": "^6.3.2",
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^0.27.2",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "metro-config": "^0.73.2",
     "react": "18.1.0",
     "react-native": "0.70.3",
+    "react-native-dotenv": "^3.3.1",
     "react-native-fast-image": "^8.6.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-reanimated": "^2.11.0",
