--- a/android/build.gradle
+++ b/android/build.gradle
@@ -58,6 +58,8 @@ allprojects {
             }
         }
         google()
+        maven { url 'https://maven.google.com' }
+
         maven { url 'https://www.jitpack.io' }
     }
 }
