--- a/package.json
+++ b/package.json
@@ -11,32 +11,25 @@
     "cc": "rimraf node_modules/.cache/babel-loader/*,"
   },
   "dependencies": {
-    "@hookform/resolvers": "^2.9.10",
-    "@react-native-async-storage/async-storage": "^1.17.10",
-    "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
     "@reduxjs/toolkit": "^1.8.6",
-    "axios": "^0.27.2",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "metro-config": "^0.73.2",
     "react": "18.1.0",
-    "react-hook-form": "^7.42.1",
     "react-native": "0.70.3",
     "react-native-dotenv": "^3.3.1",
     "react-native-fast-image": "^8.6.1",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-image-crop-picker": "^0.37.3",
     "react-native-reanimated": "^2.11.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.4.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-toast-notifications": "^3.3.1",
     "react-redux": "^8.0.4",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "zod": "^3.20.2"
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
